--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
-Flask
+pandas==1.3.5
+numpy==1.21.6
+seaborn==0.11.2
+matplotlib==3.5.1
+scikit-learn==0.24.2
+catboost==0.26
+xgboost==1.5.0
+Flask==2.0.2
+dill==0.3.4
+
 
 # Commented out the following line to avoid building the package repeatedly during development.
 # Uncomment this line when you are ready to build the package for production.
